[package]
name = "mmtc"
version = "0.3.2"
authors = ["figsoda <figsoda@pm.me>"]
edition = "2021"
description = "Minimal mpd terminal client that aims to be simple yet highly configurable"
readme = "README.md"
homepage = "https://github.com/figsoda/mmtc"
repository = "https://github.com/figsoda/mmtc"
license = "MPL-2.0"
keywords = ["cli", "mpd", "music", "terminal", "tui"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.71"
async-io = "1.13.0"
async-net = "1.7.0"
crossbeam-queue = "0.3.8"
crossterm = "0.26.1"
dirs = "5.0.1"
expand = "0.3.0"
futures-lite = "1.13.0"
ron = "0.8.0"
secular = { version = "1.0.1", features = ["normalization"] }
serde = { version = "1.0.163", features = ["derive"] }

[dependencies.clap]
version = "4.1.11"
features = ["cargo", "derive", "unicode", "wrap_help"]

[dependencies.ratatui]
version = "0.20.1"
default-features = false
features = ["crossterm", "serde"]

[build-dependencies]
clap = { version = "4.1.11", features = ["derive"] }
clap_complete = "4.2.3"
clap_mangen = "0.2.10"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
