[package]
name = "mmtc"
version = "0.3.2"
authors = ["figsoda <figsoda@pm.me>"]
edition = "2021"
description = "Minimal mpd terminal client that aims to be simple yet highly configurable"
readme = "README.md"
homepage = "https://github.com/figsoda/mmtc"
repository = "https://github.com/figsoda/mmtc"
license = "MPL-2.0"
keywords = ["cli", "mpd", "music", "terminal", "tui"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.75"
async-io = "2.2.1"
async-net = "2.0.0"
crossbeam-queue = "0.3.8"
crossterm = "0.27.0"
dirs = "5.0.1"
expand = "0.3.0"
futures-lite = "2.0.1"
ron = "0.8.1"
secular = { version = "1.0.1", features = ["normalization"] }
serde = { version = "1.0.193", features = ["derive"] }

[dependencies.clap]
version = "4.4.10"
features = ["cargo", "derive", "unicode", "wrap_help"]

[dependencies.ratatui]
version = "0.23.0"
default-features = false
features = ["crossterm", "serde"]

[build-dependencies]
clap = { version = "4.4.10", features = ["derive"] }
clap_complete = "4.4.4"
clap_mangen = "0.2.15"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
