[package]
name = "mmtc"
version = "0.3.2"
authors = ["figsoda <figsoda@pm.me>"]
edition = "2021"
description = "Minimal mpd terminal client that aims to be simple yet highly configurable"
readme = "README.md"
homepage = "https://github.com/figsoda/mmtc"
repository = "https://github.com/figsoda/mmtc"
license = "MPL-2.0"
keywords = ["cli", "mpd", "music", "terminal", "tui"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.80"
async-io = "2.3.1"
async-net = "2.0.0"
crossbeam-queue = "0.3.11"
crossterm = "0.27.0"
dirs = "5.0.1"
expand = "0.3.0"
futures-lite = "2.2.0"
ron = "0.8.1"
secular = { version = "1.0.1", features = ["normalization"] }
serde = { version = "1.0.196", features = ["derive"] }

[dependencies.clap]
version = "4.4.12"
features = ["cargo", "derive", "unicode", "wrap_help"]

[dependencies.ratatui]
version = "0.26.1"
default-features = false
features = ["crossterm", "serde"]

[build-dependencies]
clap = { version = "4.4.12", features = ["derive"] }
clap_complete = "4.5.1"
clap_mangen = "0.2.19"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
